--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
 		<p style="color:lightblue;">This is a scuba diving hub for avid 
 		enjoyers you can learn, buy equitment </p>
 		<p style="color:lightblue;"> and also get licenced with us here at scooba life the limits are limitless</p>
+			<img src="ScubaMan.jpg" width="150" height="150"></img>
+		<img src="Man2.jpg" width="150" height="150"></img>
+		<img src="Wo1.jpg" width="150" height="150"></img>
+		<img src="Man3.jpg" width="150" height="150"></img>
 		
 		</div>
 		
